# vara-dob-protocol

./: README.md
app/: .gitignore  README.md  angular.json  extra-webpack.config.js  package-lock.json  package.json  tsconfig.json
app/server/: package-lock.json  package.json
app/server/server/: README  package-lock.json  package.json  server.js
app/server/server/config/: .env-prod  .env-sample  config.js  configDB.js  headers.js
app/server/server/controllers/: authentication.ctrl.js  balance.ctrl.js  client.ctrl.js  operation.ctrl.js  pool.ctrl.js  truck.ctrl.js  user.ctrl.js
app/server/server/db/: Dockerfile  init.sh  lbg.pgsql  postgres.js  tetris4d.js
app/server/server/migrations/: 20200107184901-create-user.js  20200227191049-create-operation.js  20210201203051-create-truck.js
app/server/server/mock_data/: clients.js  operation.js  pools.js  poolsSummary.js  products.js  routeSteps.js  transactions.js  trucks.js  users.js
app/server/server/models/: camera.js  index.js  operation.js  truck.js  user-psql.js  user.js
app/server/server/queries/: balance.js  clients.js  operation.js  pools.js  trucks.js
app/server/server/services/: authentication.service.js  balance.service.js  client.service.js  cluster.service.js  download.service.js  operation.service.js  pool.service.js  truck.service.js  user.service.js
app/server/server/utils/: csvUtils.js  utils.js
app/src/: build.sh  index.html  polyfills.ts  styles.css  tsconfig.app.json
app/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
app/src/app/back-button/: back-button.component.html  back-button.component.scss  back-button.component.ts
app/src/app/blockchainUtils/: metamask-connect.service.spec.ts  metamask-connect.service.ts  participant-instance.service.spec.ts  participant-instance.service.ts  pool-instance.service.spec.ts  pool-instance.service.ts  pool-master-instance.service.spec.ts  pool-master-instance.service.ts  pool-master-methods.spec.ts  pool-master-methods.ts  pool-methods.service.spec.ts  pool-methods.service.ts
app/src/app/create-pool/: create-pool-routing.module.ts  create-pool.component.html  create-pool.component.scss  create-pool.component.spec.ts  create-pool.component.ts  create-pool.module.ts  smart-contract-data.ts
app/src/app/custom-common-modules/: custom-common-modules.module.ts  indicator-data.ts
app/src/app/dashboard/: dashboard.component.html  dashboard.component.scss  dashboard.component.ts  dashboard.module.ts
app/src/app/explore/: explore-routing.module.ts  explore.component.html  explore.component.scss  explore.component.ts  explore.module.ts  filter-box-exp.component.ts
app/src/app/my-pools/: filter-box.component.ts  my-pools-routing.module.ts  my-pools.component.html  my-pools.component.scss  my-pools.component.ts  my-pools.module.ts  (+1 more)
app/src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
contracts/: Cargo.toml
(+148 files in other folders)
